Fix iOS7 jumping filter box glitch. Closes #2250.

--- a/styles/mobile/common.less
+++ b/styles/mobile/common.less
@@ -821,6 +821,7 @@
     padding: .5em 0;
     border: 1px solid transparent;
     border-width: 1px 0;
+    float: left;
 }
 
 .km-filter-wrap
