--- a/styles/mobile/ios7.less
+++ b/styles/mobile/ios7.less
@@ -486,11 +486,6 @@
 
 /* Filter box */
 
-.km-ios7 .km-virtual-list
-{
-    position: absolute;
-}
-
 .km-ios7 .km-filter-form
 {
     color: @ios7-list-title-background;
